Implement message pagination and history loading
- Add pagination support to API endpoints with cursor-based navigation
- Implement 'Load Older Messages' functionality for remote chats
- Add scroll-based history loading in message container
- Update chat store to handle message merging and deduplication
- Add UI controls and status indicators for pagination state
- Improve relay sync to maintain current chat state after sync

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <button type="button" class="ghost-button small" id="apply-custom-range" disabled>Apply</button>
                         </div>
                     </div>
+                    <button type="button" class="ghost-button small" id="load-older-messages" disabled>Load earlier messages</button>
                 </div>
                 <div class="control-row page-actions">
                     <div class="split-button" id="export-menu">
